--- a/src/pages/homePage/HomePageStyles.module.css
+++ b/src/pages/homePage/HomePageStyles.module.css
@@ -1,5 +1,9 @@
 .container {
     background-image: url('../../assets/images/backgrounds/first img.jpeg');
     background-size: cover;
-    background-position: center;
+    background-position:top
+}
+
+.initialBigLogo {
+    padding: 10%;
 }
