--- a/src/pages/homePage/HomePageStyles.module.css
+++ b/src/pages/homePage/HomePageStyles.module.css
@@ -1,7 +1,20 @@
 .container {
+    height: 100vh;
     background-image: url('../../assets/images/backgrounds/first img.jpeg');
     background-size: cover;
-    background-position:top
+    background-position:top;
+    position: relative;
+}
+
+.overlay {
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0) , rgba(0, 0, 0, 0.874) );
+    position:absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
 }
 
 .initialBigLogo {
