--- a/src/components/BiographyComponentStyles.module.css
+++ b/src/components/BiographyComponentStyles.module.css
@@ -13,7 +13,7 @@
     margin-left: 8%;
 }
 
-.secTittle {
+.secTitle {
     background: linear-gradient(#016ca5, #bedef5);
     margin-top: 6rem;
     margin-bottom: 3rem;
