--- a/src/components/WhatsAppComponentStyles.module.css
+++ b/src/components/WhatsAppComponentStyles.module.css
@@ -1,5 +1,5 @@
 .whatsAppLink {
-    margin-top: 10%;
+    padding: 5%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
