--- a/src/components/ServicesComponentStyles.module.css
+++ b/src/components/ServicesComponentStyles.module.css
@@ -11,9 +11,10 @@
     z-index: 1;
 }
 
-.overlay p {
-    text-align: center;
-    margin-bottom: 5%;
+.overlay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .secTitle {
@@ -21,7 +22,6 @@
     margin-bottom: 5%;
     text-align: center;
     background: linear-gradient(#bedef5, #016ca5);
-    font-size: 40px;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
