--- a/src/components/ProductComponentStyles.module.css
+++ b/src/components/ProductComponentStyles.module.css
@@ -17,10 +17,11 @@
 
 .productDescription {
     height: 80vh;
+    width: 100vw;
     display: flex;  
     justify-content: center;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 10%;
 }
 
 .product {
@@ -30,15 +31,23 @@ background: linear-gradient( #00000000, #000);
 border-radius: 25px;
 display: flex;
 flex-direction: column;
-justify-content: center; /* Alinea horizontalmente el contenido del div */
-align-items: center; /* Alinea verticalmente el contenido del div */
+align-items: center; 
+justify-content: center;
 padding: 10px;
 }
+
+.product p {
+    text-align: center;
+}
   
-.productDescription:nth-child(1) {
-    align-items: flex-end;
+.product:nth-of-type(1) {
+    align-self: flex-end; /* Alinea todo el primer div .product al final del contenedor */
 }
 
-.productDescription:nth-child(2) {
-    align-items: flex-start;
+.product:nth-of-type(2) {
+    align-self: flex-start; /* Alinea todo el segundo div .product al principio del contenedor */
+}
+
+.product:nth-of-type(3) {
+    align-self: center; /* Centra todo el tercer div .product dentro del contenedor */
 }
