--- a/src/components/FormComponentStyles.module.css
+++ b/src/components/FormComponentStyles.module.css
@@ -54,3 +54,12 @@
     box-shadow: 3px 3px 5px;
 }
 
+.errorContainer {
+    min-height: 1.5rem;
+}
+
+.error {
+    color: red;
+    font-weight: 500;
+    text-align: center;
+}
