--- a/src/components/FormComponentStyles.module.css
+++ b/src/components/FormComponentStyles.module.css
@@ -54,6 +54,18 @@
     box-shadow: 3px 3px 5px;
 }
 
+.spanName, 
+.spanEmail, 
+.spanSubject, 
+.spanMessage {
+    visibility: hidden;
+}
+
+.spanVisible {
+    color: red;
+    font-weight: bolder;
+}
+
 @media screen and (max-width: 800px) {
 	.formContainer {
         width: 100%;
