Refactor: FormComponent, FormComponentStyles

--- a/src/components/FormComponentStyles.module.css
+++ b/src/components/FormComponentStyles.module.css
@@ -54,10 +54,7 @@
     box-shadow: 3px 3px 5px;
 }
 
-.spanName, 
-.spanEmail, 
-.spanSubject, 
-.spanMessage {
+.spanHidden {
     visibility: hidden;
 }
 
